package com.tutorias;

public interface INotificador {

    void enviarNotificacion(String destinatario, String mensaje);
}